--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img src="img/logo_horiz_azul.png" id="logo-img" width="160" alt="Equilibre">
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -62,7 +64,7 @@
     <div class="container mb-5">
       <div class="intro-text mb-5">
         <div class="intro-lead-in"></div>
-        <div class="intro-heading text-uppercase">EU PRECISO DE TERAPIA?</div>
+        <div class="intro-heading text-uppercase" style="text-shadow: 1px 1px 1px #000000;">EU PRECISO DE TERAPIA?</div>
         <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
       </div>
     </div>
